<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">FunBox</string>
    <string name="audio_clipper_cancel">取消</string>
    <string name="audio_clipper_confirm">确认剪辑</string>
    <string name="audio_clipper_default_time">00:00</string>
    <string name="audio_clipper_end">尾部位置</string>
    <string name="audio_clipper_info">来源:%1$s 采样率:%2$dHz 总长:%3$s 大小:%4$s</string>
    <string name="audio_clipper_max_duration_error">选中的片段不能超过 %1$s，请调整后再导出</string>
    <string name="audio_clipper_play">播放选中片段</string>
    <string name="audio_clipper_play_time">播放位置: %1$s / %2$s</string>
    <string name="audio_clipper_play_time_default">播放位置: 00:00 / 00:00</string>
    <string name="audio_clipper_preparing">正在准备音频…</string>
    <string name="audio_clipper_range">头部: %1$s 尾部: %2$s 已选: %3$s</string>
    <string name="audio_clipper_range_default">头部: 00:00 尾部: 00:00 已选: 00:00</string>
    <string name="audio_clipper_range_tip">拖动同一进度条上的两个圆点设置头尾位置</string>
    <string name="audio_clipper_reset">重置范围</string>
    <string name="audio_clipper_start">头部位置</string>
    <string name="audio_clipper_stop">停止试听</string>
    <string name="audio_clipper_title">音频剪辑</string>
    <string name="module_desc">"表情包、语音包模块
 请勿用于违法违规用途
 更新频道 t.me/QToolCI
"</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="sticker_panel_desc">"开启后,可以通过长按聊天界面的表情图标来打开面板
 如果需要保存表情,则长按消息中的表情或图片消息,选择保存到面板即可保存
 (由于初始化时机的问题,在宿主应用中开启或者关闭表情面板后,需要重启宿主应用才能生效)"</string>
    <string name="tip_input_from_tg">"从TG导入时,需要先在TG的机器人进行转换
 TG机器人: @QToolHelperBot 
 使用时,发送一张贴纸给机器人,然后点击 转换到FunBox,等待转换完成,机器人会发送对应的ID,然后输入ID即可导入
 (注:本功能无法使用加速服务器加速,如果无法使用,请自行寻找科学上网)"</string>
    <string name="voice_panel_desc">"开启后,可以通过长按聊天界面的语音图标来打开面板
 如果需要保存语音,则长按消息中的语音消息,选择保存到面板即可保存
 (由于初始化时机的问题,在宿主应用中开启或者关闭语音面板后,需要重启宿主应用才能生效)"</string>
</resources>
