<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:paddingTop="8.0dp" android:paddingBottom="12.0dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingStart="12.0dp" android:paddingEnd="12.0dp">
        <TextView android:textSize="22.0sp" android:textColor="@color/global_color_font" android:gravity="center" android:id="@id/tv_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/audio_clipper_title" />
        <TextView android:textSize="12.0sp" android:gravity="center" android:id="@id/tv_info" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:text="@string/audio_clipper_preparing" />
        <TextView android:textSize="14.0sp" android:textColor="@color/global_color_font" android:gravity="center" android:id="@id/tv_play_time" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dp" android:text="@string/audio_clipper_play_time_default" />
        <SeekBar android:enabled="false" android:id="@id/seek_preview_progress" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dp" />
        <TextView android:textSize="14.0sp" android:textColor="@color/global_color_font" android:gravity="center" android:id="@id/tv_clip_range" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dp" android:text="@string/audio_clipper_range_default" />
        <TextView android:textSize="12.0sp" android:gravity="center" android:id="@id/tv_range_tip" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dp" android:text="@string/audio_clipper_range_tip" />
        <fun.box001.ui.musiceditor.AudioClipRangeBar android:id="@id/range_clip_selector" android:layout_width="match_parent" android:layout_height="48.0dp" android:layout_marginTop="8.0dp" />
        <LinearLayout android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp" android:baselineAligned="false">
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="14.0sp" android:textColor="@color/global_color_font" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/audio_clipper_start" />
                <TextView android:textSize="12.0sp" android:id="@id/tv_clip_start" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dp" android:text="@string/audio_clipper_default_time" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="0.0dp" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textSize="14.0sp" android:textColor="@color/global_color_font" android:gravity="end" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/audio_clipper_end" />
                <TextView android:textSize="12.0sp" android:gravity="end" android:id="@id/tv_clip_end" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dp" android:text="@string/audio_clipper_default_time" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:theme="?android:buttonBarStyle" android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dp">
            <Button android:id="@id/btn_play_toggle" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/audio_clipper_play" android:layout_weight="1.0" style="?android:buttonBarButtonStyle" />
            <Button android:id="@id/btn_reset" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/audio_clipper_reset" android:layout_weight="1.0" android:layout_marginStart="8.0dp" style="?android:buttonBarButtonStyle" />
        </LinearLayout>
        <LinearLayout android:theme="?android:buttonBarStyle" android:gravity="center" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dp">
            <Button android:id="@id/btn_cancel" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/audio_clipper_cancel" android:layout_weight="1.0" style="?android:buttonBarButtonStyle" />
            <Button android:id="@id/btn_confirm_clip" android:layout_width="0.0dp" android:layout_height="wrap_content" android:text="@string/audio_clipper_confirm" android:layout_weight="1.0" android:layout_marginStart="8.0dp" style="?android:buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
